@@ -20,7 +20,7 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2008-03-02 15:03:03 $ $Revision: 1.7 $
+\  $Date: 2008-05-24 11:01:18 $ $Revision: 1.8 $
 \
 \ ==============================================================================
 
@@ -65,6 +65,7 @@ include ffl/config.fs
   does>
     @ +
 ;
+[THEN]
 
 
 [UNDEFINED] cfield: [IF]
@@ -139,7 +140,6 @@ include ffl/config.fs
 [THEN]
 
 
-[THEN]
 [THEN]
 
 \ ==============================================================================
